Fix: Some overflow

--- a/src/Elements/Elements.scss
+++ b/src/Elements/Elements.scss
@@ -12,6 +12,7 @@
             background: #fff;
             padding: $common-padding;
             margin-bottom: 10px;
+            word-break: break-all;
         }
         .section {
             h2 {
