--- a/src/Sources/Sources.scss
+++ b/src/Sources/Sources.scss
@@ -31,6 +31,7 @@
                 background: #fff;
                 padding: $common-padding;
                 margin-bottom: 10px;
+                word-break: break-all;
             }
             .section {
                 background: #fff;
